--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <p>To be an esteemed technical fest that can consistently evident that it keeps its stdategic planning and in
             improving institutional research and effectiveness as a model of excellence and innovation in responsible
             areas.</p>
-        <button class="btn"><a href="bout.html">Our Team</a></button>
+        <button class="btn"><a href="about.html">Our Team</a></button>
     </div>
 
     <div class="home"> 
