--- a/Register.html
+++ b/Register.html
@@ -53,7 +53,7 @@
   </style>
 </head>
 
-<!-- <body>
+<body>
   <div class="jumbotron jumbotron-fluid backimg "
     style=" background-image: url('temp-bg.png'); background-size:contain,cover; background-repeat: repeat-x;background-color:#222222">
 
@@ -69,7 +69,7 @@
   <div class="box1">
     <p class="text-white ">Minimum of 1 members required. Maximum of 4</p>
   </div>
-  --------------------------------------------------------------------------------------------------------
+<!--   -------------------------------------------------------------------------------------------------------- -->
   <form method="post" action="./registerdata.php" name="register" onsubmit="return validate()">
     <div id="div">
       <div class="form1" style="">
@@ -165,9 +165,9 @@
               <label class="form-check-label text-white" for="gridCheck1">
                 Accommodation required
               </label>
-              ---------------------------------------------- Modal -------------------------------------
+<!--               ---------------------------------------------- Modal ------------------------------------- -->
               <a href="" class="text-warning " data-toggle="modal" data-target="#exampleModalCenter">View Details</a>
-              ---------------------------------------------- /Modal -------------------------------------
+<!--               ---------------------------------------------- /Modal ------------------------------------- -->
             </div>
           </div>
         </div>
@@ -180,7 +180,7 @@
         onclick="show2();" />
     </div>
 
-    --------------------------------------------------------
+<!--     -------------------------------------------------------- -->
 
     <div id="div1" class="hide">
       <br><br>
@@ -230,9 +230,9 @@
               <label class="form-check-label text-white" for="gridCheck2">
                 Accommodation required
               </label>
-              ---------------------------------------------- Modal ---------------------------------------
+<!--               ---------------------------------------------- Modal --------------------------------------- -->
               <a href="" class="text-warning " data-toggle="modal" data-target="#exampleModalCenter">View Details</a>
-              ----------------------------------------------- /Modal --------------------------------------
+<!--               ----------------------------------------------- /Modal -------------------------------------- -->
             </div>
           </div>
         </div>
@@ -245,7 +245,7 @@
 
     </div>
 
-    --------------------------------------------------------
+<!--     -------------------------------------------------------- -->
     <div id="div2" class="hide">
       <br><br>
       <div class="box1">
@@ -294,9 +294,9 @@
               <label class="form-check-label text-white" for="gridCheck3">
                 Accommodation required
               </label>
-              ----------------------------------------------- Modal -------------------------------------
+<!--               ----------------------------------------------- Modal ------------------------------------- -->
               <a href="" class="text-warning " data-toggle="modal" data-target="#exampleModalCenter">View Details</a>
-              ----------------------------------------------- /Modal --------------------------------------
+<!--               ----------------------------------------------- /Modal -------------------------------------- -->
             </div>
           </div>
         </div>
@@ -308,7 +308,7 @@
         onclick="show4();" />
     </div>
 
-    ---------------------------------------------------------
+<!--     --------------------------------------------------------- -->
     <div id="div3" class="hide">
       <br><br>
       <div class="box1">
@@ -358,9 +358,9 @@
               <label class="form-check-label text-white" for="gridCheck4">
                 Accommodation required
               </label>
-              ---------------------------------------------- Modal --------------------------------------
+<!--               ---------------------------------------------- Modal -------------------------------------- -->
               <a href="" class="text-warning " data-toggle="modal" data-target="#exampleModalCenter">View Details</a>
-             ------------------------------------------------ /Modal --------------------------------------
+<!--              ------------------------------------------------ /Modal -------------------------------------- -->
             </div>
           </div>
         </div>
@@ -368,7 +368,7 @@
 
       </div>
     </div>
-    ----------------------------------------------------------
+<!--     ---------------------------------------------------------- -->
 
 
     <script>
@@ -453,7 +453,6 @@
         else
           x.value = "Participate Member 4";
       }
-/*
                                                                                                                                                                                                                                                             
                                                                                                                                                                                                           function show4(){
                                                                                                                                                                                                             document.getElementById('div3').style.display = 'block';
@@ -488,8 +487,8 @@
       </div>
     </div>
   </form><br>
-  ------------------------------------------------------------------------------------------------------
-  ---------------------------------------------- Modal -------------------------------------
+<!--   ------------------------------------------------------------------------------------------------------
+  ---------------------------------------------- Modal ------------------------------------- -->
   <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
@@ -512,8 +511,8 @@
       </div>
     </div>
   </div>
-  --------------------------------------------- /Modal -------------------------------------
-</body> -->
+<!--   --------------------------------------------- /Modal ------------------------------------- -->
+</body> 
 
 <body>
   <div class="row">
@@ -522,9 +521,9 @@
           class="fas fa-angle-left"></i> Register</a>
     </div>
   
-  <div class="reg">
+<!--   <div class="reg">
     <h1>Registration starts from 12th Feb</h1>
-  </div>
+  </div> -->
 </body>
 
 </html>
