--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               </div>
               <ul class="dropdown-links">
                 <li><a href="#home">HOME</a></li>
-                <li><a href="about.html">TEAM</a></li>
+                <li><a href="./about.html">TEAM</a></li>
                 <li><a href="#dept">DEPARTMENT</a></li>
                 <li><a href="#footer">CONTACT US</a></li>
               </ul>
@@ -2648,9 +2648,9 @@
         <div class="col1">
             <h4>Quick Links</h4>
             <a href="#home">Home</a>
-            <a href="about.html">Team</a>
+            <a href="./about.html">Team</a>
             <a href="#dept">Departments</a>
-            <a href="Register.html">Registration</a>
+            <a href="./Register.html">Registration</a>
         </div>
         <div class="col1">
             <h4>Departments</h4>
